# fullstack-ai-chatbot

./: .gitignore  README.md
chatbot-frontend/: package-lock.json  package.json
chatbot-frontend/src/: App.jsx  index.css
chatbot_backend/: .gitignore  agent.py  db.py  main.py  pyproject.toml  requirements.txt
